# lowfat

./: Cargo.toml  README.md
.github/workflows/: mac-r2-handoff.yml
crates/lowfat/: Cargo.toml
crates/lowfat-compress/: Cargo.toml
crates/lowfat-compress/src/: code.rs  data.rs  detect.rs  html.rs  lib.rs  lock.rs  markdown.rs  text.rs
crates/lowfat-core/benches/: core_bench.rs
crates/lowfat-core/src/: config.rs  db.rs  lf.rs  pipeline.rs  redact.rs  structured.rs  tee.rs
crates/lowfat-mcp/: Cargo.toml
crates/lowfat-mcp/src/: main.rs
crates/lowfat-plugin/src/: discovery.rs  embedded.rs  manifest.rs  security.rs
crates/lowfat-runner/src/: lf_filter.rs  process.rs  runner.rs
crates/lowfat-runner/tests/: e2e_plugin.rs  lf_plugins.rs
crates/lowfat/src/: main.rs  observatory.rs
crates/lowfat/src/commands/: candidates.rs  config.rs  filter.rs  filters.rs  gain.rs  history_prune.rs  hook.rs  level.rs  mod.rs  opencode.rs  plugin.rs  post_read.rs  run.rs  shell_init.rs  status.rs
crates/lowfat/src/filters/: git.rs
docs/: ARCHITECTURE.md  CONFIG.md  PLUGINS.md
examples/include/: README.md  sample-pytest.txt  uv-pytest.lf
examples/include/lib/: pytest.lf
plugins/find/find-compact/: filter.lf  lowfat.toml
plugins/find/find-compact/samples/: find-output-full.txt
plugins/git/git-compact/: filter.sh
plugins/grep/grep-compact/: filter.lf  lowfat.toml
plugins/grep/grep-compact/samples/: grep-output-full.txt
plugins/tree/tree-compact/: filter.lf  lowfat.toml
plugins/tree/tree-compact/samples/: tree-output-full.txt
