[workspace]
members = [
    "crates/lowfat-core",
    "crates/lowfat-compress",
    "crates/lowfat-plugin",
    "crates/lowfat-runner",
    "crates/lowfat",
    "crates/lowfat-mcp",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["zdk <di.warachet@gmail.com>"]
repository = "https://github.com/zdk/lowfat"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = { version = "1", features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }

# Internal crates (version required for crates.io publish)
lowfat-core = { path = "crates/lowfat-core", version = "=0.8.0" }
lowfat-compress = { path = "crates/lowfat-compress", version = "=0.8.0" }
lowfat-plugin = { path = "crates/lowfat-plugin", version = "=0.8.0" }
lowfat-runner = { path = "crates/lowfat-runner", version = "=0.8.0" }
