[package]
name = "lowfat-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-aware file compression for LLM token reduction"

[dependencies]
regex = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
