[package]
name = "lowfat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) server exposing lowfat's output filtering to MCP clients such as Claude Desktop"

[[bin]]
name = "lowfat-mcp"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
